# cota-aggregator

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  aggregator.toml  docker-compose.yml  rust-toolchain
.github/workflows/: ci.yml  release.yml  rust.yml
debian/: config
migrations/2022-02-07-023713_init_schema/: down.sql  up.sql
migrations/2022-03-02-032004_metadata/: down.sql  up.sql
migrations/2022-03-16-015020_add_version_to_withdraw/: down.sql  up.sql
migrations/2022-07-07-100714_add_tx_hash_lock_script_to_withdraw/: down.sql  up.sql
migrations/2022-09-27-152430_joyid_meta_extension/: down.sql  up.sql
migrations/2022-10-13-093930_ccid_lock/: down.sql  up.sql
migrations/2022-11-16-100913_social_recovery/: down.sql  up.sql
migrations/2022-11-28-162853_subkey/: down.sql  up.sql
rpc/: Cargo.toml
rpc/src/: api.rs  config.rs  db.rs  error.rs  lib.rs  smt.rs  utils.rs
rpc/src/db/: mod.rs  mysql.rs  types.rs
rpc/src/request/: claim.rs  define.rs  helper.rs  mint.rs  mod.rs  transfer.rs  update.rs  withdrawal.rs
rpc/src/smt/: claim.rs  common.rs  constants.rs  define.rs  mint.rs  mod.rs  transfer.rs  update.rs  withdrawal.rs
src/: api.rs  main.rs  schema.rs  utils.rs
src/business/: helper.rs  mod.rs  transaction.rs
src/ckb/: constants.rs  indexer.rs  mod.rs  rpc.rs
src/db/: mysql.rs
src/entries/: claim.rs  claim_update.rs  constants.rs  define.rs  extension.rs  helper.rs  mint.rs  mod.rs  sequent_transfer.rs  sequential_transfer.rs  smt.rs  social.rs  subkey.rs  transfer.rs  transfer_update.rs  update.rs  withdrawal.rs  witness.rs
src/indexer/: index.rs
src/models/: block.rs  check_info.rs  claim.rs  claimed.rs  class.rs  common.rs  define.rs  helper.rs  hold.rs  issuer.rs  joyid.rs  mod.rs  registry.rs  scripts.rs  types.rs  withdraw.rs  withdrawal.rs
src/models/extension/: leaves.rs  mod.rs  social.rs  subkey.rs
src/models/withdrawal/: mod.rs  nft.rs  transaction.rs
src/request/: claim.rs  define.rs  extension.rs  fetch.rs  helper.rs  mint.rs  mod.rs  social.rs  subkey.rs  transfer.rs  update.rs  withdrawal.rs  witness.rs
src/response/: ccid.rs  claim.rs  define.rs  extension.rs  helper.rs  hold.rs  info.rs  issuer.rs  joyid_metadata.rs  mint.rs  mod.rs  parser.rs  social.rs  subkey.rs  transaction.rs  transfer.rs  update.rs  withdrawal.rs
src/response/witness/: cota.rs  info.rs  mod.rs  parser.rs
src/smt/: claim.rs  claim_update.rs  common.rs  constants.rs  define.rs  helper.rs  mint.rs  mod.rs  smt.rs  transfer.rs  transfer_update.rs  update.rs  withdrawal.rs
src/smt/db/: cota_db.rs  db.rs  mod.rs  schema.rs  transaction.rs
src/smt/store/: serde.rs  smt_store.rs
src/smt/tests/: mod.rs  smt.rs
src/smt/transaction/: mod.rs  store_transaction.rs
src/smt/types/: leaf.mol  leaf.rs
src/utils/: constant.rs  error.rs  helper.rs  mod.rs
tests/: README.md  index.js  mint.js  package.json  transfer1.js  transfer2.js
