[package]
name = "cota-aggregator"
version = "0.6.0"
edition = "2018"

[dependencies]
jsonrpc-http-server = "18.0.0"
jsonrpc-core = "18.0.0"
log = {version = "0.4", features = ["release_max_level_debug", "max_level_debug"]}
env_logger = "0.9"
hex = "0.4"
failure = "0.1.8"
crc = "3.0.0"
diesel = { version = "1.4.8", features = ["mysql", "r2d2", "numeric"] }
dotenv = "0.15.0"
chrono = "0.4"
molecule = "0.7.2"
lazy_static = "1.4"
rocksdb = { package = "ckb-rocksdb", version = "=0.18.0", features = ["snappy"] }
sparse-merkle-tree = "0.5.3"
ckb-types = "=0.103.0"
ckb-jsonrpc-types = ">=0.103.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
rand = "0.8"
parking_lot = "0.12.1"
sentry = "0.26.0"
cota-smt = {package = "cota-smt", git = "https://github.com/nervina-labs/cota-smt", branch="header-deps"}
ckb-sdk = {package = "ckb-sdk", git = "https://github.com/nervosnetwork/ckb-sdk-rust.git", tag="v1.0.0"}

[target.'cfg(all(not(target_env = "msvc"), not(target_os="macos")))'.dependencies]
tikv-jemallocator = { version = "0.5.0", features = ["unprefixed_malloc_on_supported_platforms"] }